# cyber-rest

./: .gitignore  .gitmodules  BUILD.md  README.md
.github/workflows/: build.yml
client/red4ext/: CMakeLists.txt  CMakePresets.json  vcpkg.json
client/red4ext/src/: CMakeLists.txt  CyberRestSystem.cpp  CyberRestSystem.hpp  HostStore.cpp  HostStore.hpp  Identity.cpp  Identity.hpp  Main.cpp  Main.hpp  NetCore.cpp  NetCore.hpp  PluginContext.hpp  Protocol.hpp
docs/: ARCHITECTURE.md
scripts/CyberRest/: Config.reds  CyberRestSystem.reds  CyberRestUI.reds  MainMenu.reds
